photo album,contacts added and tab and mobile responsive done

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <main>
         <!-- players section -->
+
         <section class="container">
             <div class="players">
                 <article class="player">
@@ -102,9 +103,10 @@
 
                 </article>
             </div>
-
         </section>
+
         <!-- highlights section  -->
+
         <section class="container">
             <div class="highlights">
                 <div class="highlights-text">
@@ -120,17 +122,112 @@
                 </div>
             </div>
         </section>
+
+        <!-- photo album section-->
+
+        <section class="container">
+            <h2 class="photo-text">Photo Album</h2>
+            <div class="photo-album">
+                <div class="photo-frame">
+                    <div class="photo">
+                        <img src="images/match/1.jpg" alt="match1">
+                    </div>
+                    <div class="photo-details">
+                        <h3>BRASIL 1 - 0 PERÚ</h3>
+                        <p> 05-07-21</p>
+                    </div>
+                </div>
+                <div class="photo-frame">
+                    <div class="photo">
+                        <img src="images/match/2.jpg" alt="match2">
+                    </div>
+                    <div class="photo-details">
+                        <h3>ARGENTINA 1 (3) - (2) 1 COLOMBIA</h3>
+                        <p>06-07-21</p>
+                    </div>
+                </div>
+                <div class="photo-frame">
+                    <div class="photo">
+                        <img src="images/match/3.jpg" alt="match3">
+                    </div>
+                    <div class="photo-details">
+                        <h3>
+                            URUGUAY 0 (2) - 0 (4) COLOMBIA
+                        </h3>
+                        <p>03-07-21</p>
+                    </div>
+                </div>
+                <div class="photo-frame">
+                    <div class="photo">
+                        <img src="images/match/4.jpg" alt="match4">
+                    </div>
+                    <div class="photo-details">
+                        <h3>
+                            BRASIL 1 - 0 CHILE
+                        </h3>
+                        <p>02-07-21</p>
+                    </div>
+                </div>
+                <div class="photo-frame">
+                    <div class="photo">
+                        <img src="images/match/5.jpg" alt="match5">
+                    </div>
+                    <div class="photo-details">
+                        <h3>
+                            PERÚ 3 (4) - (3) 3 PARAGUAY
+                        </h3>
+                        <p>02-07-21</p>
+                    </div>
+                </div>
+                <div class="photo-frame">
+                    <div class="photo">
+                        <img src="images/match/6.png" alt="match6">
+                    </div>
+                    <div class="photo-details">
+                        <h3>
+                            BOLIVIA 1 - 4 ARGENTINA
+                        </h3>
+                        <p>28-06-21</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- contact section  -->
+
+        <section class="container">
+            <div class="contact">
+                <h2 class="contact-text">Contact Us</h2>
+                <div class="contact-form">
+                    <form action="">
+                        <input type="text" name="name" placeholder="Enter Your name Here">
+                        <input type="email" name="email" placeholder="Enter Your Email Here">
+                        <textarea name="message" id="" cols="30" rows="7"
+                            placeholder="Enter your Message Here"></textarea>
+                        <button type="submit" class="contact-btn">Submit</button>
+                    </form>
+
+                </div>
+
+            </div>
+
+        </section>
     </main>
+
+    <!-- footer -->
 
     <footer>
         <div class="logo">
             <img src="images/Logo.png" alt="logo">
         </div>
         <div class="social-link">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-dribbble"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-youtube"></i>
+            <a target="_blank" href="https://github.com/arnab0000007"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://github.com/arnab0000007"><i class="fab fa-dribbble"></i></a>
+            <a target="_blank" href="https://github.com/arnab0000007"><i class="fab fa-twitter"></i></a>
+            <a target="_blank" href="https://github.com/arnab0000007"><i class="fab fa-youtube"></i></a>
+
+
+
         </div>
         <p>Copyright &copy; 2021 Football</p>
     </footer>
