--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Football Website</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/bc0afd55a3.js" crossorigin="anonymous"></script>
 </head>
 
@@ -20,7 +20,7 @@
                         class="fas fa-arrow-right"></i></a>
             </div>
             <div class="banner-image">
-                <img src="images/banner.png" alt="banner-image">
+                <img src="images/banner.png" alt="banner-image" />
             </div>
         </div>
     </section>
@@ -31,76 +31,100 @@
         <section class="container">
             <div class="players">
                 <article class="player">
-                    <img src="images/players/player-1.png" alt="player1">
+                    <img src="images/players/player-1.png" alt="player1" />
                     <h3>Neymar Jr</h3>
-                    <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
+                    <p>
+                        Neymar da Silva Santos Júnior (born 5 February 1992), known as
+                        Neymar, is a Brazilian professional footballer.
+                    </p>
+                </article>
+                <article class="player">
+                    <img src="images/players/player-2.png" alt="player2" />
+                    <h3>Lionel Messi</h3>
+                    <p>
+                        Lionel Andrés Messi also known as Leo Messi,(born 24 June 1987) is
+                        an Argentine professional footballer.
+                    </p>
+                </article>
+                <article class="player">
+                    <img src="images/players/player-3.png" alt="player3" />
+                    <h3>Cristiano Ronaldo</h3>
+                    <p>
+                        Cristiano Ronaldo dos Santos Aveiro GOIH ComM born 5 February
+                        1985) is a Portuguese professional footballer.
+                    </p>
+                </article>
+                <article class="player">
+                    <img src="images/players/player-4.png" alt="player4" />
+                    <h3>Paulo Dybala</h3>
+                    <p>
+                        Paulo Exequiel Dybala (born 15 November 1993) is an Argentine
                         professional footballer.
                     </p>
                 </article>
-
                 <article class="player">
-                    <img src="images/players/player-2.png" alt="player2">
-                    <h3>Lionel Messi</h3>
-                    <p>Lionel Andrés Messi also known as Leo Messi,(born 24 June 1987) is an Argentine
-                        professional footballer.</p>
-                </article>
-                <article class="player">
-
-                    <img src="images/players/player-3.png" alt="player3">
-                    <h3>Cristiano Ronaldo</h3>
-                    <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM born 5 February 1985) is a Portuguese
-                        professional footballer.</p>
-                </article>
-                <article class="player">
-                    <img src="images/players/player-4.png" alt="player4">
-                    <h3>Paulo Dybala</h3>
-                    <p>Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer.</p>
-                </article>
-
-
-                <article class="player">
-                    <img src="images/players/player-5.png" alt="player5">
+                    <img src="images/players/player-5.png" alt="player5" />
                     <h3>Mesut Ozil</h3>
-                    <p>Mesut Özil (born 15 October 1988) is a German professional footballer.</p>
-                </article>
-                <article class="player">
-
-                    <img src="images/players/player-6.png" alt="player6">
-                    <h3>Mauro Icardi</h3>
-                    <p>Mauro Emanuel Icardi (born 19 February 1993) is an Argentine professional footballer</p>
-                </article>
-                <article class="player">
-                    <img src="images/players/player-7.png" alt="player7">
-                    <h3>Di Maria</h3>
-                    <p>Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer</p>
-                </article>
-                <article class="player">
-                    <img src="images/players/player-8.png" alt="player8">
-                    <h3>Kylian Mbappé</h3>
-                    <p>Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer.</p>
-                </article>
-
-                <article class="player">
-                    <img src="images/players/player-9.png" alt="player9">
-                    <h3>Mohamed Salah</h3>
-                    <p>Mohamed Salah Hamed Mahrous Ghaly (born 15 June 1992) is an Egyptian professional footballer.
+                    <p>
+                        Mesut Özil (born 15 October 1988) is a German professional
+                        footballer.
                     </p>
                 </article>
                 <article class="player">
-                    <img src="images/players/player-10.png" alt="player10">
+                    <img src="images/players/player-6.png" alt="player6" />
+                    <h3>Mauro Icardi</h3>
+                    <p>
+                        Mauro Emanuel Icardi (born 19 February 1993) is an Argentine
+                        professional footballer
+                    </p>
+                </article>
+                <article class="player">
+                    <img src="images/players/player-7.png" alt="player7" />
+                    <h3>Di Maria</h3>
+                    <p>
+                        Ángel Fabián Di María (born 14 February 1988) is an Argentine
+                        professional footballer
+                    </p>
+                </article>
+                <article class="player">
+                    <img src="images/players/player-8.png" alt="player8" />
+                    <h3>Kylian Mbappé</h3>
+                    <p>
+                        Kylian Mbappé Lottin (born 20 December 1998) is a French
+                        professional footballer.
+                    </p>
+                </article>
+                <article class="player">
+                    <img src="images/players/player-9.png" alt="player9" />
+                    <h3>Mohamed Salah</h3>
+                    <p>
+                        Mohamed Salah Hamed Mahrous Ghaly (born 15 June 1992) is an
+                        Egyptian professional footballer.
+                    </p>
+                </article>
+                <article class="player">
+                    <img src="images/players/player-10.png" alt="player10" />
                     <h3>Harry Kane</h3>
-                    <p>Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer.</p>
+                    <p>
+                        Harry Edward Kane MBE (born 28 July 1993) is an English
+                        professional footballer.
+                    </p>
                 </article>
                 <article class="player">
-                    <img src="images/players/player-11.png" alt="player11">
+                    <img src="images/players/player-11.png" alt="player11" />
                     <h3>Kevin De Bruyne</h3>
-                    <p>Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer .</p>
+                    <p>
+                        Kevin De Bruyne (born 28 June 1991) is a Belgian professional
+                        footballer .
+                    </p>
                 </article>
                 <article class="player">
-                    <img src="images/players/player-12.png" alt="player12">
+                    <img src="images/players/player-12.png" alt="player12" />
                     <h3>Philippe Coutinho</h3>
-                    <p>Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer.</p>
-
+                    <p>
+                        Philippe Coutinho Correia (born 12 June 1992) is a Brazilian
+                        professional footballer.
+                    </p>
                 </article>
             </div>
         </section>
@@ -110,15 +134,17 @@
         <section class="container">
             <div class="highlights">
                 <div class="highlights-text">
-                    <h1>All Highlights
-                        Copa America 2021</h1>
-                    <p>Argentina became winners of the Copa America for the first time since 1993 as they defeated
-                        Brazil in a 1-0 encounter. The only goal of the game was scored by Angel Di Maria. </p>
+                    <h1>All Highlights Copa America 2021</h1>
+                    <p>
+                        Argentina became winners of the Copa America for the first time
+                        since 1993 as they defeated Brazil in a 1-0 encounter. The only
+                        goal of the game was scored by Angel Di Maria.
+                    </p>
                     <a class="watch-btn" target="_blank" href="https://www.youtube.com/watch?v=sDFr2Yzd-8s">Watch Now <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="highlights-image">
-                    <img src="images/match.png" alt="match">
+                    <img src="images/match.png" alt="match" />
                 </div>
             </div>
         </section>
@@ -130,16 +156,16 @@
             <div class="photo-album">
                 <div class="photo-frame">
                     <div class="photo">
-                        <img src="images/match/1.jpg" alt="match1">
+                        <img src="images/match/1.jpg" alt="match1" />
                     </div>
                     <div class="photo-details">
                         <h3>BRASIL 1 - 0 PERÚ</h3>
-                        <p> 05-07-21</p>
+                        <p>05-07-21</p>
                     </div>
                 </div>
                 <div class="photo-frame">
                     <div class="photo">
-                        <img src="images/match/2.jpg" alt="match2">
+                        <img src="images/match/2.jpg" alt="match2" />
                     </div>
                     <div class="photo-details">
                         <h3>ARGENTINA 1 (3) - (2) 1 COLOMBIA</h3>
@@ -148,45 +174,37 @@
                 </div>
                 <div class="photo-frame">
                     <div class="photo">
-                        <img src="images/match/3.jpg" alt="match3">
+                        <img src="images/match/3.jpg" alt="match3" />
                     </div>
                     <div class="photo-details">
-                        <h3>
-                            URUGUAY 0 (2) - 0 (4) COLOMBIA
-                        </h3>
+                        <h3>URUGUAY 0 (2) - 0 (4) COLOMBIA</h3>
                         <p>03-07-21</p>
                     </div>
                 </div>
                 <div class="photo-frame">
                     <div class="photo">
-                        <img src="images/match/4.jpg" alt="match4">
+                        <img src="images/match/4.jpg" alt="match4" />
                     </div>
                     <div class="photo-details">
-                        <h3>
-                            BRASIL 1 - 0 CHILE
-                        </h3>
+                        <h3>BRASIL 1 - 0 CHILE</h3>
                         <p>02-07-21</p>
                     </div>
                 </div>
                 <div class="photo-frame">
                     <div class="photo">
-                        <img src="images/match/5.jpg" alt="match5">
+                        <img src="images/match/5.jpg" alt="match5" />
                     </div>
                     <div class="photo-details">
-                        <h3>
-                            PERÚ 3 (4) - (3) 3 PARAGUAY
-                        </h3>
+                        <h3>PERÚ 3 (4) - (3) 3 PARAGUAY</h3>
                         <p>02-07-21</p>
                     </div>
                 </div>
                 <div class="photo-frame">
                     <div class="photo">
-                        <img src="images/match/6.png" alt="match6">
+                        <img src="images/match/6.png" alt="match6" />
                     </div>
                     <div class="photo-details">
-                        <h3>
-                            BOLIVIA 1 - 4 ARGENTINA
-                        </h3>
+                        <h3>BOLIVIA 1 - 4 ARGENTINA</h3>
                         <p>28-06-21</p>
                     </div>
                 </div>
@@ -200,17 +218,14 @@
                 <h2 class="contact-text">Contact Us</h2>
                 <div class="contact-form">
                     <form action="">
-                        <input type="text" name="name" placeholder="Enter Your name Here">
-                        <input type="email" name="email" placeholder="Enter Your Email Here">
+                        <input type="text" name="name" placeholder="Enter Your name Here" />
+                        <input type="email" name="email" placeholder="Enter Your Email Here" />
                         <textarea name="message" id="" cols="30" rows="7"
                             placeholder="Enter your Message Here"></textarea>
                         <button type="submit" class="contact-btn">Submit</button>
                     </form>
-
                 </div>
-
             </div>
-
         </section>
     </main>
 
@@ -218,20 +233,16 @@
 
     <footer>
         <div class="logo">
-            <img src="images/Logo.png" alt="logo">
+            <img src="images/Logo.png" alt="logo" />
         </div>
         <div class="social-link">
             <a target="_blank" href="https://github.com/arnab0000007"><i class="fab fa-instagram"></i></a>
             <a target="_blank" href="https://github.com/arnab0000007"><i class="fab fa-dribbble"></i></a>
             <a target="_blank" href="https://github.com/arnab0000007"><i class="fab fa-twitter"></i></a>
             <a target="_blank" href="https://github.com/arnab0000007"><i class="fab fa-youtube"></i></a>
-
-
-
         </div>
         <p>Copyright &copy; 2021 Football</p>
     </footer>
-
 </body>
 
 </html>
